# ezssh

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: aws.rs  command.rs  config.rs  error.rs  error_printer.rs  lib.rs  main.rs
